--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                     </clipPath>
                                 </defs>
                             </svg>
-                            <div class="js-star-data">Péssimo</div>
+                            <div class="js-star-data star-data">Péssimo</div>
                             <div class="js-star-item"></div>
                         </div>
                         <div class="star-item">
@@ -56,7 +56,7 @@
                                     </clipPath>
                                 </defs>
                             </svg>
-                            <div class="js-star-data">Ruim</div>
+                            <div class="js-star-data star-data">Ruim</div>
                             <div class="js-star-item"></div>
                         </div>
                         <div class="star-item">
@@ -70,7 +70,7 @@
                                     </clipPath>
                                 </defs>
                             </svg>
-                            <div class="js-star-data">Regular</div>
+                            <div class="js-star-data star-data">Regular</div>
                             <div class="js-star-item"></div>
                         </div>
                         <div class="star-item">
@@ -84,7 +84,7 @@
                                     </clipPath>
                                 </defs>
                             </svg>
-                            <div class="js-star-data">Bom</div>
+                            <div class="js-star-data star-data">Bom</div>
                             <div class="js-star-item"></div>
                         </div>
                         <div class="star-item">
@@ -98,7 +98,7 @@
                                     </clipPath>
                                 </defs>
                             </svg>
-                            <div class="js-star-data">Excelente</div>
+                            <div class="js-star-data star-data">Excelente</div>
                             <div class="js-star-item"></div>
                         </div>
                     </div>
